--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 server.port=${port:8080}
 spring.rabbitmq.host=rabbitmq
 endpoints.health.enabled=false
-spring.zipkin.baseUrl=http://${zipkin_host:zipkin}:9411/
-spring.zipkin.enabled=${zipkin_enabled:false}
+spring.zipkin.baseUrl=http://${zipkin:zipkin}:9411/
 spring.sleuth.sampler.percentage=1.0
 spring.application.name=shipping
 # Disable actuator metrics endpoints
